Add wireframes, fix typos

--- a/tier5.html
+++ b/tier5.html
@@ -94,12 +94,12 @@
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
               <div class="processCircle process oneLine"><a href="#designSection"><p class="circleText">Design</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
-              <div class="processCircle process twoLine"><a href="buildSection">
+              <div class="processCircle process twoLine"><a href="#buildSection">
               <p class="circleText build">Build &amp;<br>Deliver</br></p></a></div>
             </div>
         </div>
 
-        <div class="processSectionTitle row processCircleFix">Strategy</div>
+        <div class="processSectionTitle row processCircleFix" id="strategySection">Business Strategy</div>
 
         <div class= "ourApproachTitle octoGreen">Our Strategic Approach</div>
 
@@ -705,7 +705,7 @@
   </div>
 </div>
 
-<div class="processSectionTitle">Design</div>
+<div class="processSectionTitle" id="designSection">Design</div>
 
 <!-- <p class="videoTitle"> Design Studio with Our Client</p> -->
 <div class="videoDiv">
@@ -987,7 +987,7 @@
 </div>
 
 <!-- BUILD AND DELIVER -->
-<div class="processSectionTitle">Build &amp Deliver</div>
+<div class="processSectionTitle" id="buildSection">Build &amp Deliver</div>
 
 <div class="build">
     <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding for new clients, multiple views, a connectivity layout via an API with LinkedIn, a lead newsfeed, sorting capabilities, analytics, and an individual search engine.</p>
