fixing typos and formatting

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </section>
 
     <div id="buttonDiv">
-      <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio Website</button>
+      <!-- <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio Website</button> -->
     </div>
     <!-- content div -->
       </div>
