Finishing up typos and formatting, media queries

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -138,7 +138,7 @@
             </div>
           </div>
     </div>
-    <div><p class="statement webmdBlue">healthcare information market fragmented &amp diverse</p></div>
+    <div><p class="statement webmdBlue">Healthcare information market fragmented &amp diverse</p></div>
 
 <div class="compDiv">
     <img class="compShots" alt="Competition screen shots" src="myimages/webmd/strategy/webmd-competition.png">
@@ -194,10 +194,10 @@
       </div>
 
       <div class="compThreatLogos">
-        <img class="compThreatLogosImg" alt="Arrow" src="myimages/webmd/strategy/arrow.png">
+        <img class="compThreatLogosImg compThreatLogosImgArrow" alt="Arrow" src="myimages/webmd/strategy/arrow.png">
       </div>
 
-      <div class="compThreatLogos">
+      <div class="compThreatLogos compThreatLogosYes">
         <p class="compThreatLogoTitle titleYes">Yes</p>
         <img class="compThreatLogosImg" alt="Handshake Icon" src="myimages/webmd/strategy/handshake.png">
       </div>
@@ -407,7 +407,7 @@
 
   <!-- <div class="affinityLeftRight"> -->
     <p class="affinity webmdBlue">Our affinity map</p>
-    <p class="affinityDes">This brainstorming tool helped us to outline the users key <br>pain points: too many ads, alarming content, getting lost, etc.</br></p>
+    <p class="affinityDes">This brainstorming tool helped us to outline the users key pain points: too many ads, alarming content, getting lost, etc.</p>
     <img class="affinityMap" alt="Affinity Map" src="myimages/webmd/synthesis/affinity.png">
   <!-- </div> -->
 <!--
@@ -420,7 +420,7 @@
 
 <div class="centerEMap">
   <p class="empathy webmdGreen">Our empathy map</p>
-  <p class="affinityDes"> Allowed us to get into the mindset of those using WebMD:<br> they are often sick, scared, and worried</br></p>
+  <p class="affinityDes"> Allowed us to get into the mindset of those using WebMD: they are often sick, scared, and worried</p>
 
   <img class="empathyMap" alt="Affinity Map" src="myimages/webmd/synthesis/empathy-map.png">
 </div>
@@ -428,7 +428,7 @@
 <div class="">
 <p class=" storyboardTitle webmdBlue">Storyboard </p>
 
-<p class="storyBoardSub">Demonstrates interactions with our proposed app and wearable,<br>plus my stick figures are legendary</br></p>
+<p class="storyBoardSub">Demonstrates interactions with our proposed app and wearable, plus my stick figures are legendary</p>
 
 <div class="storyBoardDiv">
 <img class="storyBoardImg" alt="Story Board" src="myimages/webmd/synthesis/story-board.png">
@@ -438,7 +438,7 @@
 
 <div class="">
     <div class=" statement webmdBlue ">Our personas</div>
-      <p class="personaDes">WebMD has a widely varied clientele, that can be difficult to please</p>
+      <p class="personaDes">WebMD has a <b>widely varied clientele</b>, that can be difficult to please</p>
 </div>
 
 
@@ -559,23 +559,23 @@
     <p class="problemTitle">The WebMD site is complex, but for the user&#39;s the problem is simple:</p>
     <div class="bullet">
       <div class="decCircle webmdGreenBack"><p class="decNumber">1</p></div>
-      <div class="decProbText problemText"><p ><b>Perceived lack of quality and "trust" in WebMD</b><p>
+      <div class="problemText"><p ><b>Perceived lack of quality and "trust" in WebMD</b><p>
       <p class= "problemSubText"> Content is fluffy, often scary, and ad-filled </p> </div>
     </div>
     <div class="bullet">
       <div class="decCircle webmdGreenBack"><p class="decNumber">2</p></div>
-      <div class="decProbText problemText"><p><b>Getting lost in a sea of generic healthcare information</b></p>
+      <div class= "problemText"><p><b>Getting lost in a sea of generic healthcare information</b></p>
       <p class= "problemSubText">It's not easy to find only the articles pertinent to them or their family </p> </div>
     </div>
 
 </div>
 
-  <div class="statement webmdBlue">Checking in with business goals</div>
+  <div class="statement statementBusGoals webmdBlue">Checking in with business goals</div>
 
 <div class="businessGoals">
     <div class="businessGoalsIntro">
         <p class="businessGoalsSub">Must. Have. Ads. Lots. Of. Ads.</p>
-        <p class="businessGoalsSubText">Many of <b>our competitors were reluctant to recommend changes to WebMD website because of its ads.</b> Ads are the main revenue stream for the site (although not for the company overall).<b> But we think they can&#39;t see the forest for the trees.</b></p>
+        <p class="businessGoalsSubText">Many of <b>our competitors were reluctant to recommend changes to WebMD website because of its ads.</b> Ads are the main revenue stream for the site (although not for the company overall).<b> But we believe they just can&#39;t see the forest for the trees.</b></p>
     </div>
 
     <div class="trees">
@@ -590,35 +590,66 @@
       </div>
     </div>
 
-  <div class="businessGoalsBullets">
-      <img class="busGoalBulletImg busGoalBulletImg1" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">
-      <p class="busGoalsBulletText">With our approach people would be much more likely to come to WebMD and stay longer. Therefore, reducing the ads on the app, even drastically, won&#39;t mean reduced ad visibility, the chance of users viewing an ad will be be much higher.</p>
+  <div class="businessGoalsBullets fourLines">
+      <div class="busGoalBulletImgDiv ">
+      <img class="busGoalBulletImg busGoalBulletImg4line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">
+          </div>
+      <div class="plusBusBullets">
+        <p class="busGoalsBulletText">Users more likely to come to WebMD and to stay longer</p>
+        <p class="busGoalsBulletSubText">When using our approach, reducing the ads on the app, even drastically, won&#39;t mean reduced ad visibility. Instead, the odds of users viewing an ad will be much higher as there will be much more frequent engagement</p>
+      </div>
   </div>
 
 
   <div class="businessGoalsBullets">
-    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText">WebMD will receive a new revenue stream from a co-market wearable</p>
+    <div class="busGoalBulletImgDiv">
+      <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    </div>
+    <div class="plusBusBullets">
+      <p class="busGoalsBulletText">Co-market wearable revenue stream</p>
+      <p class="busGoalsBulletSubText">WebMD could receive a substantial new revenue stream from a co-market wearable</p>
+    </div>
   </div>
 
-  <div class="businessGoalsBullets">
-    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText">Revenue from additional API agreements (other fitness devices)<p>
+  <div class="businessGoalsBullets threeLines">
+    <div class="busGoalBulletImgDiv">
+      <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    </div>
+    <div class="plusBusBullets">
+      <p class="busGoalsBulletText">Revenue generated from future API agreements <p>
+      <p class="busGoalsBulletSubText">A new potential revenue source from additional API agreements for other fitness devices</p>
+    </div>
   </div>
 
-  <div class="businessGoalsBullets">
-    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText">Improved user loyalty, less ads, less likely to leave the site, better retention<p>
+  <div class="businessGoalsBullets threeLines">
+    <div class="busGoalBulletImgDiv ">
+      <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    </div>
+    <div class="plusBusBullets">
+      <p class="busGoalsBulletText">Improved user loyalty<p>
+      <p class="busGoalsBulletSubText">Less ads and better content will make people less likely to leave the WebMD app leading to better retention</p>
+    </div>
+
   </div>
 
-  <div class="businessGoalsBullets">
-    <img class="busGoalBulletImg busGoalBulletImg2" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText">Change the reputation of WebMD as an outdated and &#34;scarey&#34; site to one of innovation an cutting edge technology and  user experience<p>
+  <div class="businessGoalsBullets threeLines">
+    <div class="busGoalBulletImgDiv ">
+      <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    </div>
+    <div class="plusBusBullets">
+      <p class="busGoalsBulletText">Give WebMD a cutting-edge tech image<p>
+      <p class="busGoalsBulletSubText">The app will help to change WebMD image as an outdated and &#34;scarey&#34; site to one of innovation an cutting-edge technology and user experience</p>
+    </div>
   </div>
 
-  <div class="businessGoalsBullets busGoalBullet3">
-    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText ">Potential new revenue stream, selling user data<p>
+  <div class="businessGoalsBullets busGoalBullet3 threeLines">
+    <div class="busGoalBulletImgDiv ">
+      <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    </div>
+    <div class="plusBusBullets">
+      <p class="busGoalsBulletText">More potential revenue, selling app data<p>
+      <p class="busGoalsBulletSubText"> Selling user app data is a different potential new revenue stream, which offers buyers a very holistic view of a users health needs and physical health</p>
+    </div>
   </div>
 </div>
 
@@ -629,8 +660,8 @@
     <!-- col-xs-12 col-sm-6 -->
     <img class="webmdHub" alt="WebMD Hub" src="myimages/webmd/synthesis/hub-logo.png">
     <div class="experienceText">
-      <p class="experienceTitle webmdGreen">Healthcare Hub</p>
-      <p class="experienceSentence"> Native app that offers serves as your hub trusted news from all available healthcare sources based on your preferences. You only see health news important to you and your family.</p>
+      <p class="experienceTitle webmdGreen">Healthcare Hub App</p>
+      <p class="experienceSentence"> Native app that offers serves as your hub for trusted news from all available healthcare sources based on your preferences. You only see health news important to you and your family.</p>
     </div>
   </div>
 
@@ -641,7 +672,7 @@
       <img class="iwatch" alt="iWatch Screen" src="myimages/webmd/synthesis/apple-watch.png">
       <div class="experienceText experienceTextiWatch">
         <p class="experienceTitle webmdGreen">Wearable </p>
-        <p class="experienceSentence">Co-marketed original design companion wearable (and API for other wearables) that generates news and alters from your own biometrics</p>
+        <p class="experienceSentence">Co-marketed original design companion wearable (and API for other wearables) that generates news and alerts from your own biometrics</p>
       </div>
   </div>
 </div>
@@ -654,23 +685,23 @@
 <div class="featuresList row">
   <div class="realTimeAndNur2 ">
   <!-- <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5"> -->
-        <p class="experienceTitleIcon ">Healthcare Hub</p>
+        <p class="experienceTitleIcon ">Healthcare Hub App</p>
         <div class="iconSentence ">
           <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2 ">All your healthcare information, all sources, all in one place </p>
         </div>
         <div class="iconSentence">
         <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
-          <p class="experienceSentence2">Simple quick on-boarding</p>
+          <p class="experienceSentence2">Simple, fast on-boarding</p>
         </div>
         <div class="iconSentence">
         <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
-          <p class="experienceSentence2">Easy to used preferences, help you to choose topics</p>
+          <p class="experienceSentence2">Easy-to-use preferences, help you to quickly choose topics</p>
         </div>
-        <div class="iconSentence ">
+        <!-- <div class="iconSentence ">
           <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
-          <p class="experienceSentence2 ">Changes preferences quickly on-the-go</p>
-        </div>
+          <p class="experienceSentence2">Change preferences easily, on-the-go</p>
+        </div> -->
         <div class="iconSentence ">
             <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2 ">Regular medication alerts</p>
@@ -757,7 +788,7 @@
           </div>
 
           <div class="approachSubPoints">
-            <p>Outcomes: change preferences at the news feed level, articles, or profile</p>
+            <p>Outcomes: change preferences at the newsfeed, article, or profile level</p>
           </div>
         </div>
     </div>
@@ -765,8 +796,8 @@
   <div class="taskSections">
       <div class="taskCircle decCircle3 webmdBlueBack"><p class="decNumber decNumber3">3</p></div>
       <div class="taskText">
-        <div class="taskPoints "><p>Successfully search for sleep apnea article on app</p></div>
-        <div class="approachSubPoints"><p>Outcomes: 2+ ways to find an article</p></div>
+        <div class="taskPoints "><p>Successfully find sleep apnea article on app</p></div>
+        <div class="approachSubPoints"><p>Outcomes: find article through search, newsfeed, scroll, etc.</p></div>
       </div>
   </div>
 
@@ -781,7 +812,8 @@
   <div class="taskSections">
       <div class="taskCircle decCircle3 webmdBlueBack"><p class="decNumber decNumber3">5</p></div>
       <div class="taskText">
-      <div class="taskPoints"><p>Identifying biometric-generated articles from feed</div>
+      <div class="taskPoints"><p>Identifying biometric-generated articles</div>
+      <div class="approachSubPoints"><p>Outcomes: find the biometric-generated articles in newsfeed or article view</p></div>
       </div>
   </div>
 
@@ -812,7 +844,7 @@
   <div class="paperPrototypes">
     <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-home.png">
-    <p class="paperProtoText">App Home Page</p>
+    <p class="paperProtoText">App landing page</p>
     </div>
 
     <div class="paperProtoDiv">
@@ -850,7 +882,7 @@
   </div>
 
   <div class="feedbackP heavyText">
-    <p class="feedbackPText"><b>"I love this! You have my steps and all my personal news at the top</b>, but still trending articles to keeps me up the latest health news.</p>
+    <p class="feedbackPText"><b>"I love this! You have my steps and all my personal news at the top</b>, but also trending articles to keeps me up the latest health news.</p>
     </div>
 
   </div>
@@ -880,7 +912,7 @@
       </div>
 
       <div class="feedbackP heavyText">
-    <p>"Oh <b>those arrows on the picture are to scroll articles?</b> I would never get that. I thought it was just for pictures</p>
+    <p>"Oh <b>those arrows on the picture are to scroll articles?</b> I would never get that. I thought it was just for pictures."</p>
     </div>
 </div>
 
@@ -892,7 +924,7 @@
   </div>
 
   <div class="feedbackP heavyText">
-      <p>This is super easy to read, just scroll down. But I would <b>put these [article feedback] icons higher up so I don't have to scroll through the whole article first to use them?</b></p>
+      <p>"This is super easy to read, just scroll down.<b> But I don't like that I have to scroll through the whole article before I can use these [article feedback] icons."</b></p>
   </div>
 
   </div>
@@ -982,7 +1014,7 @@
 <div class="processSectionTitle" id="buildSection">Build &amp Deliver</div>
 
 <div class="build">
-    <p class="buildText">Our final interactive wireframes encompass a number of features, including> a quick and easy on-boarding, clear-simple-personalized newsfeed, fitness/biometric data, and an easy search.</p>
+    <p class="buildText">Our final interactive wireframes encompass a number of features, including: a quick and easy on-boarding, clear-simple-personalized newsfeed, all fitness/biometric data and heatlh news all on one screen, and an easy search.</p>
 </div>
 
 <div><p class="statement beforeAndAfter webmdBlue">Initial tested draft vs medium fidelity</p></div>
@@ -1032,7 +1064,7 @@
   <div class="stepsSec">
     <div class="recTop">More Testing & Design Refinement</div>
     <div class="phaseText">
-      <p>- 1-2 rounds of user testing to refine low-fidelity design</p>
+      <p class="phaseTextP">- 1-2 rounds of user testing to further refine medium-fidelity design</p>
       <p>- A/B testing to choose the best landing page</p>
       <p>- Finalized and polish design into a full color mock up</p>
     </div>
