--- a/webmd.html
+++ b/webmd.html
@@ -70,7 +70,7 @@
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle webmdGreen">Our Challange</p>
-            <p class="boxText heavyText">WebMD is well known for being a key source on health issues and having a vast amount of content available to its users. However, given growing competition in the online health space, the management believes that users want a more personalized experience, which they believe should lead to more frequent (and maybe even daily) engagement as well as better retention.
+            <p class="boxText heavyText">WebMD is well known for being a key resource for health issues and having a vast amount of content available to its users. However, given growing competition in the online health space, the management believes that users want a more personalized experience, which they believe should lead to more frequent (and maybe even daily) engagement as well as better retention.
           </p>
           </div>
 
