--- a/webmd.html
+++ b/webmd.html
@@ -69,14 +69,14 @@
         </div>
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
-            <p class="boxTitle webmdGreen">Our Challange</p>
+            <p class="boxTitle webmdGreen">Our Challenge</p>
             <p class="boxText heavyText">WebMD is well known for being a key resource for health issues and having a vast amount of content available to its users. However, given growing competition in the online health space, the management believes that users want a more personalized experience, which they believe should lead to more frequent (and maybe even daily) engagement as well as better retention.
           </p>
           </div>
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <p class="boxTitle webmdGreen">My Role</p>
-            <p class="boxText heavyText"> As part of a class project, our team of three worked collaboratively through the design process for 2 weeks to design the concept and prepare basic wireframes. My most prominent roles were in: ideation, concept creation, wearable prototyping, survey and interview question development, interviews, design, task analysis, user testing, presentation creation and delivery.
+            <p class="boxText heavyText"> As part of a class project, our team of three worked collaboratively through the design process for 2 weeks to design the concept and prepare basic wireframes. My most prominent roles were in: ideation, concept creation, wearable prototyping, interviews, user testing, and presentation creation and delivery.
           </p>
       </div>
         </div>
@@ -482,7 +482,7 @@
 
 
 <table class="personas">
-  <caption class="personaTypes text-center webmdGreen"> Steve, 28, Fitness Saavy Single</caption>
+  <caption class="personaTypes text-center webmdGreen"> Steve, 28, Fitness Savvy Single</caption>
 <tbody class="text-center">
 <tr>
     <td class="">
@@ -661,7 +661,7 @@
     <img class="webmdHub" alt="WebMD Hub" src="myimages/webmd/synthesis/hub-logo.png">
     <div class="experienceText">
       <p class="experienceTitle webmdGreen">Healthcare Hub App</p>
-      <p class="experienceSentence"> Native app that offers serves as your hub for trusted news from all available healthcare sources based on your preferences. You only see health news important to you and your family.</p>
+      <p class="experienceSentence"> Native app that serves as your hub for trusted news from all available healthcare sources based on your preferences. You only see health news important to you and your family.</p>
     </div>
   </div>
 
@@ -1014,7 +1014,7 @@
 <div class="processSectionTitle" id="buildSection">Build &amp Deliver</div>
 
 <div class="build">
-    <p class="buildText">Our final interactive wireframes encompass a number of features, including: a quick and easy on-boarding, clear-simple-personalized newsfeed, all fitness/biometric data and heatlh news all on one screen, and an easy search.</p>
+    <p class="buildText">Our final interactive wireframes encompass a number of features, including: a quick and easy on-boarding, clear-simple-personalized newsfeed, fitness/biometric data and health news all on one screen, and an easy search.</p>
 </div>
 
 <div><p class="statement beforeAndAfter webmdBlue">Initial tested draft vs medium fidelity</p></div>
