--- a/webmd.html
+++ b/webmd.html
@@ -590,7 +590,46 @@
       </div>
     </div>
 
-  <div class="businessGoalsBullets fourLines">
+    <div class="problem">
+        <!-- <p class="problemTitle">The WebMD site is complex, but for the user&#39;s the problem is simple:</p> -->
+        <div class="bullet">
+          <div class="decCircle webmdGreenBack"><p class="decNumber">1</p></div>
+          <div class="problemText"><p><b>Users more likely to come to WebMD and to stay longer</b><p>
+          <p class= "problemSubText"> When using our approach, reducing the ads on the app, even drastically, won&#39;t mean reduced ad visibility. Instead, the odds of users viewing an ad will be much higher as there will be much more frequent engagement </p> </div>
+        </div>
+        <div class="bullet">
+          <div class="decCircle webmdGreenBack"><p class="decNumber">2</p></div>
+          <div class= "problemText"><p><b>Co-market wearable revenue stream</b></p>
+          <p class= "problemSubText">WebMD could receive a substantial new revenue stream from a co-market wearabl</p> </div>
+        </div>
+
+        <div class="bullet">
+          <div class="decCircle webmdGreenBack"><p class="decNumber">3</p></div>
+          <div class= "problemText"><p><b>Revenue generated from future API agreements</b></p>
+          <p class= "problemSubText">A new potential revenue source from additional API agreements for other fitness devices </p> </div>
+        </div>
+
+        <div class="bullet">
+          <div class="decCircle webmdGreenBack"><p class="decNumber">4</p></div>
+          <div class= "problemText"><p><b>Improved user loyalty</b></p>
+          <p class= "problemSubText">Less ads and better content will make people less likely to leave the WebMD app leading to better retention</p> </div>
+        </div>
+
+        <div class="bullet">
+          <div class="decCircle webmdGreenBack"><p class="decNumber">5</p></div>
+          <div class= "problemText"><p><b>Give WebMD a cutting-edge tech image</b></p>
+          <p class= "problemSubText">The app will help to change WebMD image as an outdated and &#34;scarey&#34; site to one of innovation an cutting-edge technology and user experience</p> </div>
+        </div>
+
+        <div class="bullet">
+          <div class="decCircle webmdGreenBack"><p class="decNumber">6</p></div>
+          <div class= "problemText"><p><b>More potential revenue, selling app data</b></p>
+          <p class= "problemSubText">Selling user app data is a different potential new revenue stream, which offers buyers a very holistic view of a users health needs and physical health</p> </div>
+        </div>
+
+    </div>
+
+  <!-- <div class="businessGoalsBullets fourLines">
       <div class="busGoalBulletImgDiv ">
       <img class="busGoalBulletImg busGoalBulletImg4line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">
           </div>
@@ -598,10 +637,9 @@
         <p class="busGoalsBulletText">Users more likely to come to WebMD and to stay longer</p>
         <p class="busGoalsBulletSubText">When using our approach, reducing the ads on the app, even drastically, won&#39;t mean reduced ad visibility. Instead, the odds of users viewing an ad will be much higher as there will be much more frequent engagement</p>
       </div>
-  </div>
+  </div> -->
 
-
-  <div class="businessGoalsBullets">
+  <!-- <div class="businessGoalsBullets">
     <div class="busGoalBulletImgDiv">
       <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
     </div>
@@ -609,9 +647,9 @@
       <p class="busGoalsBulletText">Co-market wearable revenue stream</p>
       <p class="busGoalsBulletSubText">WebMD could receive a substantial new revenue stream from a co-market wearable</p>
     </div>
-  </div>
+  </div> -->
 
-  <div class="businessGoalsBullets threeLines">
+  <!-- <div class="businessGoalsBullets threeLines">
     <div class="busGoalBulletImgDiv">
       <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
     </div>
@@ -619,9 +657,9 @@
       <p class="busGoalsBulletText">Revenue generated from future API agreements <p>
       <p class="busGoalsBulletSubText">A new potential revenue source from additional API agreements for other fitness devices</p>
     </div>
-  </div>
+  </div> -->
 
-  <div class="businessGoalsBullets threeLines">
+  <!-- <div class="businessGoalsBullets threeLines">
     <div class="busGoalBulletImgDiv ">
       <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
     </div>
@@ -630,9 +668,9 @@
       <p class="busGoalsBulletSubText">Less ads and better content will make people less likely to leave the WebMD app leading to better retention</p>
     </div>
 
-  </div>
+  </div> -->
 
-  <div class="businessGoalsBullets threeLines">
+  <!-- <div class="businessGoalsBullets threeLines">
     <div class="busGoalBulletImgDiv ">
       <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
     </div>
@@ -640,9 +678,9 @@
       <p class="busGoalsBulletText">Give WebMD a cutting-edge tech image<p>
       <p class="busGoalsBulletSubText">The app will help to change WebMD image as an outdated and &#34;scarey&#34; site to one of innovation an cutting-edge technology and user experience</p>
     </div>
-  </div>
+  </div> -->
 
-  <div class="businessGoalsBullets busGoalBullet3 threeLines">
+  <!-- <div class="businessGoalsBullets busGoalBullet3 threeLines">
     <div class="busGoalBulletImgDiv ">
       <img class="busGoalBulletImg busGoalBulletImg3line" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
     </div>
@@ -651,7 +689,7 @@
       <p class="busGoalsBulletSubText"> Selling user app data is a different potential new revenue stream, which offers buyers a very holistic view of a users health needs and physical health</p>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="statement webmdBlue">Our solution: WebMD Strong</div>
 
