--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -56,8 +56,10 @@
 <div id="content">
     <h2 class="octoGreen changeBack emojiFix">Welcome to Emoji Libs!<br>A website created to help people learn how to use emojis</br></h2>
     <div class="comingSoon">
-    <p class="charcol des emojiFix"><br>This section will be a "lessons learned" from coding my first website and how code has made me a better designer. <br>I am still slugging it out with the code for this part of my portfolio, but please feel free to check out the real website anytime.</br><br><b>It's already live. Just click the pic below:</b></br></p>
+    <p class="charcol des emojiFix"><br>This section will be a "lessons learned" from coding my first website and how code has made me a better designer. <br>I am still slugging it out with the code for this part of my portfolio, but please feel free to check out the real website anytime.</br><br><b>It's already <a class="catBurritoSecretDoor" href="emoji-libs-port-temp.html">live.</a> Just click the pic below:</b></br></p>
 </div>
+
+<!-- <a class="catBurritoSecretDoor" href="emoji-libs-port-temp.html">cat burrito!</p></a> -->
     <a href="https://jcdaviesauthor.github.io/FEWD37/final-project/index.html"><img id="emoji" alt="Emoji-Libs Website" src="myimages/emoji-libs.png"></a>
 
 <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
