--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 </div>
 </section>
 
-    <div id="buttonDiv">
-      <!-- <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio Website</button> -->
-    </div>
+    <!-- <div id="buttonDiv">
+      <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio Website</button>
+    </div> -->
     <!-- content div -->
       </div>
 <div id="footer">
